--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -9,6 +9,7 @@
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Cloud"
 			 d:DataContext="{d:DesignInstance viewModel:CloudCredentialsViewModel}"
+			 Loaded="ViewLoaded"
 			 mc:Ignorable="d">
 	<UserControl.Resources>
 		<ResourceDictionary>
@@ -22,189 +23,164 @@
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
 
-			<Style TargetType="Image">
-				<Setter Property="RenderOptions.BitmapScalingMode"
-						Value="HighQuality" />
-			</Style>
-
 		</ResourceDictionary>
 	</UserControl.Resources>
 
-	<StackPanel>
-		<Grid>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="4*" />
+		</Grid.ColumnDefinitions>
+
+		<StackPanel Grid.Row="0"
+					Grid.ColumnSpan="2"
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
+
+			<Button Content="{x:Static root:PluginResources.Auth_Cloud_SSO}"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Command="{Binding SelectAuthenticationTypeCommand}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+					IsEnabled="False"
+					Cursor="Hand"
+					Width="200"
+					Margin="0 8"
+					Visibility="Collapsed" />
+			<Button Content="{x:Static root:PluginResources.Auth_Cloud_Credentials}"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Command="{Binding SelectAuthenticationTypeCommand}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+					Cursor="Hand"
+					Width="200"
+					Margin="0 8" />
+			<Button Content="{x:Static root:PluginResources.Auth_Cloud_Secrets}"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Command="{Binding SelectAuthenticationTypeCommand}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
+					Cursor="Hand"
+					Width="200"
+					Margin="0 8" />
+		</StackPanel>
+
+		<Grid Grid.Row="1"
+			  Grid.ColumnSpan="2"
+			  Margin="24 0">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*" />
-				<RowDefinition Height="Auto" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="*" />
 				<RowDefinition Height="*" />
 				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
 
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="4*" />
+				<ColumnDefinition Width="5*" />
 			</Grid.ColumnDefinitions>
 
-			<StackPanel Grid.Row="0"
-						Grid.ColumnSpan="2"
-						Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
-				<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
-						Command="{Binding SignLoggedUserCommand}"
-						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-						Visibility="{Binding TranslationOptions.CloudCredentials.UserID, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
-						Cursor="Hand"
-						HorizontalAlignment="Center"
-						Width="200"
-						Margin="0 0 0 8">
-					<Button.Content>
-						<StackPanel Orientation="Horizontal">
-							<TextBlock Text="•"
-									   Foreground="#3dfc03" />
-							<TextBlock Text=""
-									   Margin="0 0 0 0" />
-							<TextBlock Text="{Binding TranslationOptions.CloudCredentials.UserID}"
-									   Margin="4 0 0 0" />
-						</StackPanel>
-					</Button.Content>
-				</Button>
+			<!-- User ID -->
+			<TextBlock Grid.Row="0"
+					   Grid.Column="0"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					   VerticalAlignment="Center"
+					   Focusable="True" />
 
-				<Button Content="{x:Static root:PluginResources.Auth_Cloud_SSO}"
-						Style="{StaticResource Sdl.Button.PrimaryStyle}"
-						Command="{Binding SelectAuthenticationTypeCommand}"
-						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-						IsEnabled="False"
-						Cursor="Hand"
-						Width="200"
-						Margin="0 8" 
-						Visibility="Collapsed"/>
-				<Button Content="{x:Static root:PluginResources.Auth_Cloud_Credentials}"
-						Style="{StaticResource Sdl.Button.PrimaryStyle}"
-						Command="{Binding SelectAuthenticationTypeCommand}"
-						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-						Cursor="Hand"
-						Width="200"
-						Margin="0 8" />
-				<Button Content="{x:Static root:PluginResources.Auth_Cloud_Secrets}"
-						Style="{StaticResource Sdl.Button.PrimaryStyle}"
-						Command="{Binding SelectAuthenticationTypeCommand}"
-						CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
-						Cursor="Hand"
-						Width="200"
-						Margin="0 8" />
-			</StackPanel>
+			<TextBox Grid.Row="0"
+					 Grid.ColumnSpan="2"
+					 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
+					 Style="{StaticResource WatermarkTextBox}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=UserId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
+					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 Margin="0 8" />
+			<!-- User ID -->
 
-			<Grid Grid.Row="1"
-				  Grid.ColumnSpan="2"
-				  Margin="24 0">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="*" />
-					<RowDefinition Height="*" />
-					<RowDefinition Height="*" />
-					<RowDefinition Height="*" />
-					<RowDefinition Height="*" />
-				</Grid.RowDefinitions>
+			<!-- Password -->
+			<TextBlock Grid.Row="1"
+					   Grid.Column="0"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
+					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					   VerticalAlignment="Center"
+					   Focusable="True" />
 
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*" />
-					<ColumnDefinition Width="5*" />
-				</Grid.ColumnDefinitions>
-
-				<!-- User ID -->
-				<TextBlock Grid.Row="0"
-						   Grid.Column="0"
-						   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
-						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-						   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						   VerticalAlignment="Center" 
-						   Focusable="True"/>
-
-				<TextBox Grid.Row="0"
+			<PasswordBox Grid.Row="1"
 						 Grid.ColumnSpan="2"
-						 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
-						 Style="{StaticResource WatermarkTextBox}"
-						 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
-						 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=UserId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
-						 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						 Margin="0 8" />
-				<!-- User ID -->
+						 x:Name="userPwBox"
+						 PasswordChanged="UserPassword_Changed"
+						 Style="{StaticResource WatermarkPasswordBox}"
+						 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
+						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
+			<!-- Password -->
 
-				<!-- Password -->
-				<TextBlock Grid.Row="1"
-						   Grid.Column="0"
-						   Text="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
-						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-						   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						   VerticalAlignment="Center"
-						   Focusable="True"/>
-				
-				<PasswordBox Grid.Row="1"
-							 Grid.ColumnSpan="2"
-							 PasswordChanged="UserPassword_Changed"
-							 Style="{StaticResource WatermarkPasswordBox}"
-							 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
-							 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
-				<!-- Password -->
+			<!-- Client ID -->
+			<TextBlock Grid.Row="2"
+					   Grid.Column="0"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+					   Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					   VerticalAlignment="Center"
+					   Focusable="True" />
 
-				<!-- Client ID -->
-				<TextBlock Grid.Row="2"
-						   Grid.Column="0"
-						   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
-						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-						   Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						   VerticalAlignment="Center"
-						   Focusable="True" />
-				
-				<TextBox Grid.Row="2"
+			<TextBox Grid.Row="2"
+					 Grid.ColumnSpan="2"
+					 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
+					 Style="{StaticResource WatermarkTextBox}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ClientId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
+					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 Margin="0 8" />
+			<!-- Client ID -->
+
+			<!-- Client Secret -->
+			<TextBlock Grid.Row="3"
+					   Grid.Column="0"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientSecret}"
+					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+					   Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					   VerticalAlignment="Center"
+					   Focusable="True" />
+
+			<PasswordBox Grid.Row="3"
 						 Grid.ColumnSpan="2"
-						 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
-						 Style="{StaticResource WatermarkTextBox}"
-						 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
-						 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ClientId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
-						 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-						 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						 Margin="0 8" />
-				<!-- Client ID -->
-
-				<!-- Client Secret -->
-				<TextBlock Grid.Row="3"
-						   Grid.Column="0"
-						   Text="{x:Static root:PluginResources.Auth_Cloud_ClientSecret}"
-						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-						   Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						   VerticalAlignment="Center"
-						   Focusable="True" />
-				
-				<PasswordBox Grid.Row="3"
-							 Grid.ColumnSpan="2"
-							 PasswordChanged="ClientSecret_Changed"
-							 Style="{StaticResource WatermarkPasswordBox}"
-							 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
-							 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
-				<!-- Client Secret -->
-			</Grid>
-
-			<Button Grid.Row="2"
-					Grid.ColumnSpan="2"
-					Content="{x:Static root:PluginResources.Auth_SignIn}"
-					Command="{Binding SignInCommand}"
-					Style="{StaticResource Sdl.Button.PrimaryStyle}"
-					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-					Cursor="Hand"
-					Width="200"
-					Margin="0 32 0 8" />
-
-			<Button Grid.Row="3"
-					Grid.ColumnSpan="2"
-					Content="{x:Static root:PluginResources.Auth_ChangeAuthType}"
-					Command="{Binding BackCommand}"
-					Style="{StaticResource Sdl.Button.SecondaryStyle}"
-					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-					Cursor="Hand"
-					Width="200"
-					Margin="0 8 0 8" />
+						 x:Name="clientSecretBox"
+						 PasswordChanged="ClientSecret_Changed"
+						 Style="{StaticResource WatermarkPasswordBox}"
+						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
+						 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
+			<!-- Client Secret -->
 		</Grid>
-	</StackPanel>
 
+		<Button Grid.Row="2"
+				Grid.ColumnSpan="2"
+				Content="{x:Static root:PluginResources.Auth_SignIn}"
+				Command="{Binding SignInCommand}"
+				Style="{StaticResource Sdl.Button.PrimaryStyle}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 32 0 8" />
+
+		<Button Grid.Row="3"
+				Grid.ColumnSpan="2"
+				Content="{x:Static root:PluginResources.Auth_ChangeAuthType}"
+				Command="{Binding BackCommand}"
+				Style="{StaticResource Sdl.Button.SecondaryStyle}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 8 0 8" />
+	</Grid>
 </UserControl>
