--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -87,12 +87,12 @@
 							 HorizontalAlignment="Center" />
 
 					<StackPanel Grid.Row="0"
-								Visibility="{Binding ProviderView.IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
+								Visibility="{Binding ProviderView.IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}">
 						<TextBox Grid.Row="0"
 								 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 								 Cursor="Arrow"
 								 Text="You've chosen Client Secret Authentication. Please provide the generated client secret for access."
-								 Visibility="{Binding ProviderView.IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+								 Visibility="{Binding ProviderView.IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 								 FontSize="14"
 								 HorizontalAlignment="Center" />
 						<Button Style="{StaticResource Sdl.Button.HyperLinkStyle}"
@@ -174,7 +174,6 @@
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
 								CommandParameter="{x:Static root:Constants.EdgeService}"
-								IsEnabled="False"
 								Cursor="Hand"
 								Width="200"
 								Margin="0 8" />
