--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -5,12 +5,130 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:root="clr-namespace:LanguageWeaverProvider"
 			 xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-			 xmlns:local="clr-namespace:LanguageWeaverProvider.View.Edge"
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Edge"
 			 d:DataContext="{d:DesignInstance viewModel:EdgeCredentialsViewModel}"
+			 Loaded="ViewLoaded"
 			 mc:Ignorable="d">
-    <Grid>
-            
-    </Grid>
+
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkTextBoxResources.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkPasswordBoxResources.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+
+			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
+
+		</ResourceDictionary>
+	</UserControl.Resources>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+
+		<Button Grid.Row="0"
+				Content="Single sign-on"
+				Style="{StaticResource Sdl.Button.PrimaryStyle}"
+				Command="{Binding SelectAuthenticationTypeCommand}"
+				CommandParameter="{x:Static root:AuthenticationType.EdgeSSO}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 8" />
+
+		<Button Grid.Row="1"
+				Content="User credentials"
+				Style="{StaticResource Sdl.Button.PrimaryStyle}"
+				Command="{Binding SelectAuthenticationTypeCommand}"
+				CommandParameter="{x:Static root:AuthenticationType.EdgeCredentials}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 8" />
+
+		<Button Grid.Row="2"
+				Content="API Key"
+				Style="{StaticResource Sdl.Button.PrimaryStyle}"
+				Command="{Binding SelectAuthenticationTypeCommand}"
+				CommandParameter="{x:Static root:AuthenticationType.EdgeApiKey}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 8" />
+
+		<TextBox Grid.Row="0"
+				 Grid.Column="1"
+				 Text="{Binding Host, UpdateSourceTrigger=PropertyChanged}"
+				 Style="{StaticResource WatermarkTextBox}"
+				 controls:TextBoxWatermarkHelper.WatermarkText="Host: https://my-domain.com:8001/"
+				 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+				 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Host, Type={x:Type viewModel:EdgeCredentialsViewModel}}"
+				 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+				 Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				 Margin="24 8"
+				 VerticalAlignment="Top" />
+
+		<TextBox Grid.Row="2"
+				 Grid.Column="1"
+				 Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+				 Style="{StaticResource WatermarkTextBox}"
+				 controls:TextBoxWatermarkHelper.WatermarkText="Username"
+				 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+				 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Username, Type={x:Type viewModel:EdgeCredentialsViewModel}}"
+				 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+				 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				 Margin="24 8" 
+				 VerticalAlignment="Top"/>
+
+		<PasswordBox Grid.Row="3"
+					 Grid.ColumnSpan="2"
+					 x:Name="userPwBox"
+					 PasswordChanged="UserPassword_Changed"
+					 Style="{StaticResource WatermarkPasswordBox}"
+					 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
+					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
+					 Margin="24 0 24 16"/>
+
+		<PasswordBox Grid.Row="2"
+					 Grid.ColumnSpan="2"
+					 x:Name="apiKeyBox"
+					 PasswordChanged="ApiKey_Changed"
+					 Style="{StaticResource WatermarkPasswordBox}"
+					 controls:PasswordBoxWatermarkHelper.WatermarkText="API Key"
+					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 Margin="24 0 24 16" />
+
+		<Button Grid.Row="4"
+				Content="Sign in"
+				Command="{Binding SignInCommand}"
+				Style="{StaticResource Sdl.Button.PrimaryStyle}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 8 0 8" />
+
+		<Button Grid.Row="5"
+				Content="Change auth type"
+				Command="{Binding BackCommand}"
+				Style="{StaticResource Sdl.Button.SecondaryStyle}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				Cursor="Hand"
+				Width="200"
+				Margin="0 8 0 8" />
+	</Grid>
 </UserControl>
